@@ -86,9 +86,9 @@
   :group 'lsp-yaml
   :package-version '(lsp-mode . "6.2"))
 
-(defcustom lsp-yaml-schemas (make-hash-table)
+(defcustom lsp-yaml-schemas '()
   "Associate schemas to YAML files in a glob pattern."
-  :type '(restricted-sexp :match-alternatives (hash-table-p))
+  :type '(alist :key-type (string :tag "schema") :value-type (string :tag "files (glob)"))
   :group 'lsp-yaml
   :package-version '(lsp-mode . "6.2"))
 
